# meet.xlm-stellar

./: .gitignore  README.md  documentation.md
back-end/: .eslintrc.js  .gitignore  README.md  deno.json  package-lock.json  package.json  tsconfig.json
back-end/src/: app.module.ts  main.ts
back-end/src/events/: events.controller.ts  events.module.ts  events.service.ts
back-end/supabase/: DEPLOY_GUIDE.md  ENV_SETUP.md  QUICK_START.md  config.toml  configure-secrets.sh  deno.json  deploy.sh  setup-secrets.sh  test-functions.sh
back-end/supabase/.temp/: pooler-url  project-ref
back-end/supabase/migrations/: 001_initial_schema.sql  20250101_init_events_schema.sql  20250102_create_zk_table.sql  20250103_add_zkverify_hash.sql
frontend/: BENTO_GRID_GUIDE.md  COMPONENTS_GUIDE.md  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
meet-app/: App.tsx  CHANGELOG.md  DESIGN_GUIDE.md  README.md  STYLES_MIGRATION.md  app.json  index.ts  metro.config.js  package-lock.json  package.json  run-on-iphone.sh
soroban/hash-store/: Cargo.toml  QUICK_START.md  README.md  build.sh
soroban/hash-store/src/: lib.rs
soroban/hash-store/verifier-lib/: README.md  package.json
soroban/hash-store/verifier-lib/src/: index.ts
webapp/: .env.example  PWA_INSTALL.md  README.md  VERCEL_SETUP.md  ZK_PROOF_SETUP.md  index.html  package-lock.json  package.json  vite.config.ts
webapp/public/: zk_noir_circuit.json
webapp/scripts/: generate-pwa-icons.md
webapp/src/: App.css  App.tsx  main.tsx
zk-circuit/: Nargo.toml  compile.sh  copy-to-webapp.sh
(+109 files in other folders)
